username and passwd update

--- a/index.html
+++ b/index.html
@@ -176,30 +176,7 @@
                     <div class="plan-body">
                         <div class="plan-list mb-4">
                             <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 167.99.78.201</li><li class="list-group-item"><strong>SSH</strong>: 22
-</li><li class="list-group-item"><strong>Dropbear</strong>: 80
-</li><li class="list-group-item"><strong>SSL</strong>: 443
-</li><li class="list-group-item"><strong>Squid</strong>: 3128
-</li><li class="list-group-item"><strong>udpgw</strong>: 7300</li>
-                            </ul>
-                        </div>
-                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('SG-MODEL')" class="btn btn-primary display-4">Get started</a></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 align-center col-lg-4">
-                <div class="plan">
-                    <div class="plan-header">
-                        <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL</strong></h6>
-                        <div class="plan-price">
-                            <p class="price mbr-fonts-style m-0 display-5"><strong>Singapore</strong><br></p>
-                            <p class="price-term mbr-fonts-style mb-3 display-4"></p>
-                        </div>
-                    </div>
-                    <div class="plan-body">
-                        <div class="plan-list mb-4">
-                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
-                                <li class="list-group-item"><strong>IP</strong>: 128.199.196.121</li><li class="list-group-item"><strong>SSH</strong>: 22
+                                <li class="list-group-item"><strong>IP</strong>: 178.128.55.81</li><li class="list-group-item"><strong>SSH</strong>: 22
 </li><li class="list-group-item"><strong>Dropbear</strong>: 80
 </li><li class="list-group-item"><strong>SSL</strong>: 443
 </li><li class="list-group-item"><strong>Squid</strong>: 3128
@@ -307,10 +284,10 @@
 	<div><div class="modal fade" id="SG-MODEL" tabindex="-1" role="dialog" aria-labelledby="SG-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="SG-MODELLabel">Singapore Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="SG-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;autive <br>
+      <strong>Username</strong>: &nbsp;&nbsp;hystinet <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;autive
+      <strong>Password</strong>: &nbsp;&nbsp;hystinet
   </h4><br>
 </div>
 <br>		
@@ -373,10 +350,10 @@
 	<div><div class="modal fade" id="US-MODEL" tabindex="-1" role="dialog" aria-labelledby="US-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="US-MODELLabel">United States Sever</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="US-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;strects<br>
+      <strong>Username</strong>: &nbsp;&nbsp;shiphile<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;strects
+      <strong>Password</strong>: &nbsp;&nbsp;shiphile
   </h4><br>
 </div>
 <br>
@@ -438,10 +415,10 @@
 	<div><div class="modal fade" id="AZ-MODEL" tabindex="-1" role="dialog" aria-labelledby="AZ-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="AZ-MODELLabel">Australia Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="AZ-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;slimpers<br>
+      <strong>Username</strong>: &nbsp;&nbsp;mistial<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;slimpers
+      <strong>Password</strong>: &nbsp;&nbsp;mistial
   </h4><br>
 </div>
 <br>
@@ -503,10 +480,10 @@
 	<div><div class="modal fade" id="IN-MODEL" tabindex="-1" role="dialog" aria-labelledby="IN-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="IN-MODELLabel">Indian Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="IN-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;veytoy<br>
+      <strong>Username</strong>: &nbsp;&nbsp;excity<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;veytoy
+      <strong>Password</strong>: &nbsp;&nbsp;excity
   </h4><br>
 </div>
 <br>
@@ -568,10 +545,10 @@
   <div><div class="modal fade" id="CA-MODEL" tabindex="-1" role="dialog" aria-labelledby="CA-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="CA-MODELLabel">Indian Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="CA-MODEL_body"><div style="text-align: center">
  <br>
     <h4>
-      <strong>Username</strong>: &nbsp;&nbsp;nastally<br>
+      <strong>Username</strong>: &nbsp;&nbsp;troilets<br>
   </h4>
   <h4>
-      <strong>Password</strong>: &nbsp;&nbsp;nastally
+      <strong>Password</strong>: &nbsp;&nbsp;troilets
   </h4><br>
 </div>
 <br>
