--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name=”robots” content=”index, follow”>
   <meta name="keywords" content="mickyssh, lalantha madhushan, mickybro, mickyvirus, http injector, ehi, free internet, ssh, ssl, dropbear, ssh premium server free, sri lanka, v2ray premium, v2ray servers, v2ray ssh, v2ray premium account, v2ray port 80">
   <meta name="author" content="Lalantha Madhushan">
-  <!-- <meta http-equiv = "refresh" content = "3; url = http://www.mickyssh.me" /> -->
+  <meta http-equiv = "refresh" content = "3; url = http://www.mickyssh.me" />
   
   
   <title>MickySSH | High Speed Premium SSH SSL/TLS V2Ray Servers</title>
