--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <meta name="twitter:title" content="MickySSH | High Speed Premium SSH SSL/TLS V2Ray Servers">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/mbr-181x172.png" type="image/x-icon">
-  <meta name="description" content="Make Your Connection More Secure and Unblock All Sites With SSH Account. Boost Internet Speed, Bypass Censorship, Privacy & Security">
-  <meta name=”robots” content=”index, follow”>
-  <meta name="keywords" content="mickyssh, lalantha madhushan, mickybro, mickyvirus, http injector, ehi, free internet, ssh, ssl, dropbear, ssh premium server free, sri lanka, v2ray premium, v2ray servers, v2ray ssh, v2ray premium account, v2ray port 80">
+  <meta name="robots" content="noindex">
   <meta name="author" content="Lalantha Madhushan">
   <meta http-equiv = "refresh" content = "3; url = http://www.mickyssh.me" />
   
