--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="twitter:title" content="MickySSH | High Speed Premium SSH SSL/TLS V2Ray Servers">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/mbr-181x172.png" type="image/x-icon">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex,nofollow">
   <meta name="author" content="Lalantha Madhushan">
   <meta http-equiv = "refresh" content = "3; url = http://www.mickyssh.me" />
   
